# advent-ocaml

day1/: day1.opam  dune-project  input.txt
day1/lib/: files.ml  helpers.ml  print.ml
day2/: day2.opam  dune-project
day2/lib/: files.ml
day3/: dune-project
day3/lib/: helpers.ml  print.ml
day4/: dune-project
day4/lib/: print.ml
day5/: day5.opam  dune-project  dune-workspace
day5/lib/: files.ml  helpers.ml  parser.ml
day6/: day6.opam  dune-project
day6/lib/: helpers.ml
day6/test/: day6.ml  dune
day7/: day7.opam  dune-project
day7/lib/: dune  parser.ml
