(lang dune 3.11)

(name day6)

(generate_opam_files true)

(source
 (github An-Tu/advent-ocaml))

(authors "An-Tu")

(maintainers "An-Tu")

(package
 (name day6)
 (depends ocaml dune iter (alcotest :with-test)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
